# agent-coworker

./: .emdash.json  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cowork_Agent_PRD.md  GEMINI.md  LICENSE  README.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  biome.json  cowork-agent-system-prompt.md  knip.json  modify_prompt.py  opencode.json  package.json  skills-lock.json  test-suite-audit.md  test_markdown.ts  test_model.ts  test_ws.ts  tsconfig.json
.agent-user/: memory.sqlite
.antigravitycli/: e9688877-eba1-4711-b210-f77073d433a3.json  f8ace163-05a1-46a3-a68e-b398094703a0.json
.claude/: launch.json  settings.local.json
.claude/.supermemory-claude/: config.json
.codex/: hooks.json
.cursor/: mcp.json
.gemini/: settings.json
.github/workflows/: ci.yml  (+9 more)
config/: defaults.json
crates/cowork-win-sandbox/: Cargo.toml  README.md  UPSTREAM.md  build.rs  prebuilt.lock.json
crates/cowork-win-sandbox/src/: main.rs
docs/: a2ui.md  architecture.md  audit-code-bloat.md  bun-native-migration.md  bundling-guide.md  cloud-sync.md  custom-tools.md  desktop-design-system.md  desktop-ios-relay-architecture.md  desktop-settings-ui-ux-audit-2026-03-13.md  diagnostics.md  liquid-dom-integration.md  mcp-guide.md  mobile-accessibility.md  mobile-list-performance.md  mobile-remote-access.md  native-sandbox.md  packaged-telemetry.md  platform-abstraction-plan.md  privacy-telemetry.md  quic-pairing.md  release-telemetry-checklist.md  sandbox.md  session-storage-architecture.md  skills-prompt-fix-plan.md  ui-quality-audit-2026-07.md  websocket-protocol.md  workspace-context.md
examples/: ws-jsonrpc-smoke.ts  ws-legacy-smoke.ts
prompts/: memory-consolidator.md  memory-generator.md  skill-improver.md  system.md
scripts/: build_cowork_server_binary.ts  build_desktop_resources.ts  build_sandbox_helpers.ts  build_server_binary.ts  check_docs.ts  chrome_inspector.ts  clean.ts  cloud_session_start.sh  desktop_agent_browser.ts  fetch_comments.py  generate_ws_jsonrpc_schema.ts  harness_smoke.ts  observability_stack.ts  open_xcode_workspace.ts  postinstall.ts  releaseBuildUtils.ts  run_raw_agent_loops.ts  run_tests.ts  run_tests_stable.ts  setup_artifact_runtime.ts  setup_codex_primary_runtime.ts  setup_cowork_runtime.ts  start_web_dev.ts  winSandboxPrebuilt.ts
src/: advancedMemoryAgent.ts  advancedMemoryStore.ts  agent.ts  artifactRuntime.ts  codexPrimaryRuntime.ts  config.ts  connect.ts  coworkRuntime.ts  index.ts  managedSofficeRuntime.ts  memoryStore.ts  migrateAgentConfig.ts  projectInstructions.ts  prompt.ts  providerStatus.ts  turnSystemPrompt.ts  types.ts  version.ts
tasks/: lessons.md  todo.md
test/: advancedMemory.generator.test.ts  advancedMemory.readPastConversation.test.ts  advancedMemory.recall.test.ts  advancedMemory.store.test.ts  advancedMemoryStore.test.ts  agent.remote-mcp.grep.test.ts  agent.test.ts  agent.toolloop.test.ts  agentControl.test.ts  agentProfiles.test.ts  agentProfiles.toolPolicy.test.ts  agentReportParser.test.ts  agentSocket.parse.test.ts  agentSocket.runtime.test.ts  approval.classify.test.ts  approval.test.ts  artifactComparisonService.test.ts  artifactPreviewService.test.ts  artifactRuntime.test.ts  artifactRuntimeZip.test.ts  atomicFile.test.ts  bash.readonly-policy.test.ts  build-desktop-resources.test.ts  bun-test-bootstrap.ts  bun-test-setup.ts  canvasDocumentPersistence.test.ts  childModelRouting.test.ts  ci.workflow.test.ts  citationMetadata.test.ts  cli-args.test.ts  cli-entrypoint.test.ts  cli-sanitize-terminal.test.ts  codexPrimaryRuntime.test.ts  codexPrimaryRuntimeZip.test.ts  config.test.ts  connect.test.ts  cowork-server-release.workflow.test.ts  coworkRuntime.bootstrapLock.test.ts  coworkRuntime.e2e.integration.test.ts  coworkRuntime.test.ts  (+289 more)
windows-sandbox/: readiness.json
(+2261 files in other folders)
